--- a/src/components/RequirementDisplay/AddReqModal/styles.module.css
+++ b/src/components/RequirementDisplay/AddReqModal/styles.module.css
@@ -8,6 +8,5 @@
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: stretch;
-  max-width: 95%;
   /* width: 45rem; */
 }
