--- a/src/components/RequirementDisplay/PresetsModal/styles.module.css
+++ b/src/components/RequirementDisplay/PresetsModal/styles.module.css
@@ -2,7 +2,3 @@
   composes: button from global;
   /* composes: is-medium from global; */
 }
-
-.modal {
-  max-width: 95%;
-}
